--- a/aula1/nginx.yaml
+++ b/aula1/nginx.yaml
@@ -1,33 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: httpbin
+  name: nginx
 spec:
-  replicas: 2 
+  replicas: 1
   selector:
     matchLabels:
-      app: httpbin
+      app: nginx
   template:
     metadata:
       labels:
-        app: httpbin
+        app: nginx
     spec:
       containers:
-      - name: httpbin
-        image: kennethreitz/httpbin
+      - name: nginx
+        image: nginx:latest
         ports:
         - containerPort: 80
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: httpbin
+  name: nginx
 spec:
+  type: LoadBalancer
   selector:
-    app: httpbin
+    app: nginx
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer
+
+
