--- a/aulas_2024/aula1/nginx-deployment.yaml
+++ b/aulas_2024/aula1/nginx-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namaspace: aula1
+  namespace: aula1
 spec:
   replicas: 2
   selector:
