--- a/aulas_2024/aula2/zabbix-agent-deployment.yaml
+++ b/aulas_2024/aula2/zabbix-agent-deployment.yaml
@@ -16,7 +16,8 @@ spec:
       containers:
       - name: zabbix-agent
         image: zabbix/zabbix-agent2:latest
-        command: ["-c", "/etc/zabbix/zabbix_agent2.conf"]
+        args:
+          - "--config=/etc/zabbix/zabbix_agent2.conf"
         volumeMounts:
         - name: zabbix-agent-config
           mountPath: "/etc/zabbix"
@@ -24,3 +25,4 @@ spec:
       - name: zabbix-agent-config
         configMap:
           name: zabbix-agent-config
+
