--- a/aulas_2024/aula3/deploymentexample.yaml
+++ b/aulas_2024/aula3/deploymentexample.yaml
@@ -17,17 +17,8 @@ spec:
         image: kennethreitz/httpbin
         ports:
         - containerPort: 80
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: httpbin-service
-spec:
-  type: ClusterIP
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: httpbin
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "200Mi"
 
