--- a/aulas_2024/aula3/hpa-full.yaml
+++ b/aulas_2024/aula3/hpa-full.yaml
@@ -1,19 +1,25 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: httpbin-cpu-hpa
+  name: httpbin-hpa
   namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: httpbin-deployment
-  minReplicas: 2 
+  minReplicas: 2
   maxReplicas: 10
   metrics:
   - type: Resource
     resource:
       name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
+  - type: Resource
+    resource:
+      name: memory
       target:
         type: Utilization
         averageUtilization: 50
