--- a/aulas_2024/aula2/appexample.yaml
+++ b/aulas_2024/aula2/appexample.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: httpbin
-        image: kennethreitz/httpbin
+        image: kennethreitz/httpbin:latest
         ports:
         - containerPort: 80
 
