--- a/aulas_2025/aula1/nginx-app.yaml
+++ b/aulas_2025/aula1/nginx-app.yaml
@@ -25,10 +25,10 @@ metadata:
   name: nginx-service
   namespace: aula1
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: nginx
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80 
+  - port: 80
+    targetPort: 80
+    nodePort: 30080
