--- a/aulas_2025/aula8/jaeger-demo/docker-compose-simples.yml
+++ b/aulas_2025/aula8/jaeger-demo/docker-compose-simples.yml
@@ -28,6 +28,7 @@ services:
     ports:
       - "8080:8080"
     environment:
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4318
       - JAEGER_AGENT_HOST=jaeger
       - JAEGER_AGENT_PORT=6831
     networks:
